--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- the start button -->
         <hr>
         <div id="subwrapper">
-        <div class="btn btn-primary" id="start">Start</div>
+        <div class="btn btn-primary" id="start">Begin Quiz</div>
         </div>
     <!-- musicbox -->
         <audio controls autoplay>
